--- a/mac/AU-Info.plist
+++ b/mac/AU-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>PulseDelay</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.Teragon Audio.PulseDelay.AU</string>
+	<string>com.teragonaudio.pulsedelay.au</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
