--- a/mac/VST-Info.plist
+++ b/mac/VST-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.Teragon Audio.PulseDelay.VST</string>
+	<string>com.teragonaudio.pulsedelay.vst</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
